--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -61,3 +61,9 @@ DOC_APP_PATH=/keg/tap
 # Needed so react-native apps know how to connect to the package
 # Users the docker-keg IP address
 RN_PACKAGER_IP={{ envs.KEG_DOCKER_IP }}
+
+# Global public git key. Can only read public repos, can not write
+# Allows pulling keg-repos from Github npm package registry
+# Does NOT have write access to ANY repos
+# Does NOT have read access to ANY PRIVATE repos
+PUBLIC_GIT_KEY=acd3ad71610d75742eb7f9457d8a5441b6c14509
