--- a/containers/components/Dockerfile
+++ b/containers/components/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /
 
 # These args are expected to be set as --build-arg
 # Which Allow them to be used durring the build
-ARG GIT_KEY
+ARG PUBLIC_GIT_KEY
 ARG GIT_COMPONENTS_URL=INITIAL
 
 # Should we use the local copy of the keg-core repo when building
@@ -27,7 +27,7 @@ COPY . /keg-temp/
 # Update git calls to github to include the key so private repos can be pulled
 # Pull down the tap locally if a git tap url exists
 # Otherwise copy over the local version from keg-temp
-RUN git config --global url.https://$GIT_KEY@github.com/.insteadOf https://github.com/; \
+RUN git config --global url.https://$PUBLIC_GIT_KEY@github.com/.insteadOf https://github.com/; \
     if [ -z "$KEG_COPY_LOCAL" ] && [ "$GIT_COMPONENTS_URL" != "INITIAL" ]; then \
       echo "[ Keg-CLI ] Pulling keg-components from github"; \
       git clone $GIT_COMPONENTS_URL $DOC_APP_PATH; \
@@ -44,7 +44,7 @@ COPY *.lock $DOC_APP_PATH/
 # Install the dependecies with yarn install, then remove the .npmrc
 RUN cd $DOC_APP_PATH; \
     echo "@simpleviewinc:registry=https://npm.pkg.github.com/" > .npmrc; \
-    echo "//npm.pkg.github.com/:_authToken=${GIT_KEY}" >> .npmrc; \
+    echo "//npm.pkg.github.com/:_authToken=${PUBLIC_GIT_KEY}" >> .npmrc; \
     yarn install; \
     yarn cache clean; \
     rm -f .npmrc
@@ -52,7 +52,6 @@ RUN cd $DOC_APP_PATH; \
 # ------- New Build Stage ------- #
 
 # Use a multi stage build for security
-# This is so GIT_KEY is not accessable in the final image
 FROM $GIT_STAGE_IMAGE_FROM as gitBuilder
 WORKDIR /
 
@@ -69,11 +68,11 @@ ARG KEG_DOCKER_IP
 # Will use the ip address of the docker container.
 ENV REACT_NATIVE_PACKAGER_HOSTNAME $KEG_DOCKER_IP
 
-# Set GIT_KEY to be empty value so yarn install doesn't fail
-ENV GIT_KEY=""
-
 # Install git for the new stage
-RUN apk add --no-cache git bash
+RUN apk add --no-cache git bash; \
+    echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf; \
+    sudo sysctl -p; \
+    git config --global url.https://$PUBLIC_GIT_KEY@github.com/.insteadOf https://github.com/
 
 # RUN mv /etc/profile.d/color_prompt /etc/profile.d/color_prompt.sh
 
