--- a/containers/core/docker-compose.yml
+++ b/containers/core/docker-compose.yml
@@ -18,7 +18,6 @@ services:
         - GIT_CLI_URL
         - GIT_CORE_URL
         - GIT_COMPONENTS_URL
-        - GIT_KEY
         - GIT_RETHEME_URL
         - GIT_RESOLVER_URL
         - GIT_APP_URL
@@ -26,6 +25,7 @@ services:
         - KEG_EXEC_CMD
         - KEG_NM_INSTALL
         - NODE_ENV
+        - PUBLIC_GIT_KEY
     container_name: ${CONTAINER_NAME}
     environment:
       - CHOKIDAR_USEPOLLING
@@ -46,6 +46,7 @@ services:
       - KEG_CORE_PROGRESS
       - KEG_NM_INSTALL
       - NODE_ENV
+      - PUBLIC_GIT_KEY
     ports:
       - ${EXPO_DEBUG_PORT}:${EXPO_DEBUG_PORT}
       - 80:${DOC_APP_PORT}
