--- a/containers/proxy/Dockerfile
+++ b/containers/proxy/Dockerfile
@@ -5,14 +5,12 @@ RUN apt-get install nano
 
 WORKDIR /keg
 
-# Add the GIT_KEY arg, and set value to initial
-# This expects --build-arg GIT_KEY=key_value to be set
-# Which will override the default initial value, and allow updating git
-ARG GIT_KEY=INITIAL
+
+ARG PUBLIC_GIT_KEY
 
 # Update git calls to github to include the key so private repos can be pulled
-RUN if [ "$GIT_KEY" != "INITIAL" ]; then \
-      git config --global url.https://$GIT_KEY@github.com/.insteadOf https://github.com/; \
+RUN if [ "$PUBLIC_GIT_KEY" != "INITIAL" ]; then \
+      git config --global url.https://$PUBLIC_GIT_KEY@github.com/.insteadOf https://github.com/; \
     fi
 
 # Add the GIT_PROXY_URL arg, and set value to initial
@@ -21,7 +19,7 @@ RUN if [ "$GIT_KEY" != "INITIAL" ]; then \
 ARG GIT_PROXY_URL=INITIAL
 
 # Pull down the tap locally
-RUN if [ "$GIT_KEY" != "INITIAL" ] && [ "$GIT_PROXY_URL" != "INITIAL" ]; then \
+RUN if [ "$PUBLIC_GIT_KEY" != "INITIAL" ] && [ "$GIT_PROXY_URL" != "INITIAL" ]; then \
       git clone $GIT_PROXY_URL ./proxy; \
       cp ./proxy/src/config/nginx.conf /etc/nginx/nginx.conf; \
     fi
@@ -49,7 +47,7 @@ ARG GIT_LETS_ENCRYPT_URL=INITIAL
 
 # Pull down the sv lets-encrypt locally
 # Then copy over the certs
-RUN if [ "$GIT_KEY" != "INITIAL" ] && [ "$GIT_LETS_ENCRYPT_URL" != "INITIAL" ]; then \
+RUN if [ "$PUBLIC_GIT_KEY" != "INITIAL" ] && [ "$GIT_LETS_ENCRYPT_URL" != "INITIAL" ]; then \
       git clone $GIT_LETS_ENCRYPT_URL ./svle; \
       cp ./svle/src/certs/keg.pem ./proxy/src/certs/keg.pem; \
       cp ./svle/src/certs/keg.key ./proxy/src/certs/keg.key; \
