Updates   * Cleaned up the Dockerfiles   * Added helper to get the publicGitkey   * Added public git key to container envs

--- a/containers/components/Dockerfile
+++ b/containers/components/Dockerfile
@@ -43,11 +43,8 @@ COPY *.lock $DOC_APP_PATH/
 
 # Install the dependecies with yarn install, then remove the .npmrc
 RUN cd $DOC_APP_PATH; \
-    echo "@simpleviewinc:registry=https://npm.pkg.github.com/" > .npmrc; \
-    echo "//npm.pkg.github.com/:_authToken=${PUBLIC_GIT_KEY}" >> .npmrc; \
     yarn install; \
-    yarn cache clean; \
-    rm -f .npmrc
+    yarn cache clean
 
 # ------- New Build Stage ------- #
 
