Updates   * Added CADDY envs for keg-proxy   * Added tap:start action for taps   * Updated tap to start with tailing dev/null     * Need to update composeService to be detached, and then exec   * Added action task to tap     * Allows just running a sync action without creating a sync   * Added cli volume mount to tap docker-compose     * Should probably add this for all     * Then would not need to pull from base for docker images

--- a/containers/base/docker-compose.yml
+++ b/containers/base/docker-compose.yml
@@ -21,6 +21,9 @@ services:
         - PUBLIC_GIT_KEY
     container_name: ${CONTAINER_NAME}
     environment:
+      - CADDY_HOST
+      - CADDY_PROXY_PARAMS
+      - CADDY_BASIC_AUTH
       - EXPO_DEBUG_PORT
       - EXPO_APP_PORT
       - GIT_CLI_URL
