--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -37,6 +37,16 @@ env:
   # This allows mutagen to know where to sync the local version of the dependency
   DOC_RETHEME_PATH: /keg/keg-components/node_modules/@simpleviewinc/re-theme
 
+  # --- KEG-PROXY ENVs --- #
+  # See https://github.com/whitestrake/caddy-gen for more information
+  CADDY_HOST: components.kegdev.xyz
+  CADDY_PROXY_PARAMS: transparent,websocket
+
+  # Uncomment to lock down a folder path on the server
+  # Format [path]:[user]:[pass], where [path] is the directory to protect
+  # Declare multiple by separating them with commas.
+  # CADDY_BASIC_AUTH: /:foo:bar
+
   # --- GENERAL CONTEXT ENVs --- #
 
   # Image Build information
