--- a/containers/core/values.yml
+++ b/containers/core/values.yml
@@ -29,7 +29,18 @@ env:
   DOC_COMPONENTS_PATH: "/keg/keg-core/node_modules/@simpleviewinc/keg-components"
   DOC_RETHEME_PATH: "/keg/keg-core/node_modules/@simpleviewinc/re-theme"
   DOC_RESOLVER_PATH: "/keg/keg-core/node_modules/@simpleviewinc/tap-resolver"
-  
+
+
+  # --- KEG-PROXY ENVs --- #
+  # See https://github.com/whitestrake/caddy-gen for more information
+  CADDY_HOST: core.kegdev.xyz
+  CADDY_PROXY_PARAMS: transparent,websocket
+
+  # Uncomment to lock down a folder path on the server
+  # Format [path]:[user]:[pass], where [path] is the directory to protect
+  # Declare multiple by separating them with commas.
+  # CADDY_BASIC_AUTH: /:foo:bar
+
   # --- GENERAL CONTEXT ENVs --- #
 
   # Image Build information
