--- a/containers/tap/values.yml
+++ b/containers/tap/values.yml
@@ -4,7 +4,8 @@ env:
   COMPONENTS_PATH: "{{ cli.paths.components }}"
   RETHEME_PATH: "{{ cli.paths.retheme }}"
   RESOLVER_PATH: "{{ cli.paths.resolver }}"
-
+  CLI_PATH: "{{ cli.paths.cli }}"
+  
   # --- TAP ENV CONTEXT --- #
 
   # Docker / Docker Compose paths
@@ -34,6 +35,15 @@ env:
   DOC_RETHEME_PATH: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/re-theme
   DOC_RESOLVER_PATH: /keg/tap/node_modules/keg-core/node_modules/@simpleviewinc/tap-resolver
 
+  # --- KEG-PROXY ENVs --- #
+  # See https://github.com/whitestrake/caddy-gen for more information
+  CADDY_HOST: tap.kegdev.xyz
+  CADDY_PROXY_PARAMS: transparent,websocket
+
+  # Uncomment to lock down a folder path on the server
+  # Format [path]:[user]:[pass], where [path] is the directory to protect
+  # Declare multiple by separating them with commas.
+  # CADDY_BASIC_AUTH: /:foo:bar
 
   # --- GENERAL CONTEXT ENVs --- #
 
