Updates   * Added core action task     * Runs a core sync action without creating the sync   * Updated keg-cli to be a mounted volume   * Updated run.sh to sleep by default     * core gets started from a sync action for now  * Added core sync action to mutagen.yml

--- a/containers/core/Dockerfile
+++ b/containers/core/Dockerfile
@@ -96,4 +96,4 @@ WORKDIR /$DOC_APP_PATH
 
 # Run the start script
 # Dont use the array syntax, so we have access to the DOC_CLI_PATH ENV
-CMD /bin/bash $DOC_CLI_PATH/containers/core/run.sh
+CMD /bin/bash $DOC_CLI_PATH/containers/core/run.sh "sleep"
