--- a/containers/core/docker-compose.yml
+++ b/containers/core/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     tty: true
     stdin_open: true
     privileged: true
+    volumes:
+      - ${CLI_PATH}:${DOC_CLI_PATH}
     build:
       context: ${KEG_CONTEXT_PATH}
       dockerfile: ${KEG_DOCKER_FILE}
