Updates   * Added helper to get the CMD of a docker image   * Added noDockerImg error helper   * Added more tests   * Fixed issues with getContainerConst   * Updates components Docker run.sh script to use the dev/null pattern   * Removed the proxy container, it's being moved to an injected app

--- a/containers/components/mutagen.yml
+++ b/containers/components/mutagen.yml
@@ -21,13 +21,19 @@ sync:
 actions:
   retheme:
     install:
-      location: "/keg/keg-components/node_modules/@simpleviewinc/re-theme"
+      location: /keg/keg-components/node_modules/@simpleviewinc/re-theme
       privileged: true
       cmds:
-        - "yarn install"
+        - yarn install
     start:
-      location: "/keg/keg-components/node_modules/@simpleviewinc/re-theme"
+      location: /keg/keg-components/node_modules/@simpleviewinc/re-theme
       privileged: true
       detach: true
       cmds:
-        - "yarn dev"
+        - yarn dev
+  components:
+    start:
+      location: /keg/keg-components
+      privileged: true
+      cmds:
+        - yarn web
