--- a/containers/core/values.yml
+++ b/containers/core/values.yml
@@ -1,4 +1,5 @@
 
+start: /bin/bash /keg/keg-cli/containers/core/run.sh
 env:
   # --- LOCAL ENV CONTEXT --- #
   COMPONENTS_PATH: "{{ cli.paths.components }}"
