Updates   * Added KEG_COMPOSE_EXEC envs when starting composeService     * Uses KEG_EXEC_COMPOSE_OPTS.start     * May add other options in the future  * Updated all run.sh files to use the KEG_COMPOSE_EXEC    * This allows them to know when to sleep  * Fixed bug where tap attach task was not getting the correct envs for injected apps

--- a/containers/core/Dockerfile
+++ b/containers/core/Dockerfile
@@ -99,4 +99,4 @@ WORKDIR /$DOC_APP_PATH
 SHELL [ "/bin/bash" ]
 
 # Run the start script
-CMD [ "/bin/bash", "/keg/keg-cli/containers/core/run.sh", "sleep" ]
+CMD [ "/bin/bash", "/keg/keg-cli/containers/core/run.sh" ]
