--- a/containers/core/docker-compose.yml
+++ b/containers/core/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       - GIT_APP_URL
       - KEG_IMAGE_FROM
       - KEG_EXEC_CMD
+      - KEG_COMPOSE_EXEC
       - KEG_CORE_PROGRESS
       - KEG_NM_INSTALL
       - NODE_ENV
