Updates   * Added etra data to Values and ENV template parsing   * Updated the arguments of a few methods to allow passing extra data to the template parsing   * Started an action service     * This will replace sync actions when it's done   * Fixed issue with passing cmd to syncActionService   * Removed unused service   * Removed re-theme from the cli     * It now works as an injected app

--- a/scripts/setup/cli.config.json
+++ b/scripts/setup/cli.config.json
@@ -21,8 +21,7 @@
         "core": "keg-core",
         "components": "keg-components",
         "proxy": "keg-proxy",
-        "resolver": "tap-resolver",
-        "retheme": "re-theme"
+        "resolver": "tap-resolver"
       }
     },
     "taps": {
