--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -1,5 +1,27 @@
-
-start: /bin/bash /keg/keg-cli/containers/tap/run.sh
+actions:
+  retheme:
+    install:
+      location: /keg/keg-components/node_modules/@simpleviewinc/re-theme
+      privileged: true
+      cmds:
+        - yarn install
+    start:
+      location: /keg/keg-components/node_modules/@simpleviewinc/re-theme
+      privileged: true
+      detach: true
+      cmds:
+        - yarn dev
+  components:
+    run:
+      location: /keg/keg-cli/containers/tap
+      privileged: true
+      cmds:
+        - /bin/bash run.sh
+    start:
+      location: /keg/keg-components
+      privileged: true
+      cmds:
+        - yarn web
 env:
   # --- LOCAL ENV CONTEXT --- #
 
