--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -58,7 +58,7 @@ env:
   
   # Defines the location in a docker container for a dependency
   # This allows mutagen to know where to sync the local version of the dependency
-  DOC_RETHEME_PATH: /keg/keg-components/node_modules/@simpleviewinc/re-theme
+  DOC_RETHEME_PATH: /keg/keg-components/node_modules/@svkeg/re-theme
 
   # --- KEG-PROXY ENVs --- #
   # See https://github.com/whitestrake/caddy-gen for more information
