fix: Fixed issue with syncing env files

--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -20,7 +20,7 @@ JSUTILS_PATH={{ cli.paths.jsutils }}
 # --- EXPO CONTEXT ENVs --- #
 
 # Cli
-EXPO_CLI_VERSION=3.28.0
+EXPO_CLI_VERSION=3.28.5
 
 # Container Ports
 EXPO_DEBUG_PORT=19002
@@ -33,15 +33,15 @@ GIT_KEY=INITIAL
 
 # Github URLs 
 GIT_CLI_URL={{ cli.git.orgUrl }}/{{ cli.git.repos.cli }}.git
-GIT_CORE_URL={{ cli.git.orgUrl }}/{{ cli.git.repos.core }}.git
-GIT_COMPONENTS_URL={{ cli.git.orgUrl }}/{{ cli.git.repos.components }}.git
-GIT_RESOLVER_URL={{ cli.git.orgUrl }}/{{ cli.git.repos.resolver }}.git
+GIT_HUB_URL=https://github.com/simpleviewinc/keg-hub.git
+GIT_HUB_BRANCH=develop
 
 # --- DOCKER ENV CONTEXT --- #
 
 # Name of the image used in the FROM directive of the Dockerfile
-KEG_IMAGE_FROM=keg-base:latest
 KEG_NODE_VERSION=12.19-alpine
+KEG_IMAGE_FROM=keg-base:development
+KEG_BASE_IMAGE=docker.pkg.github.com/simpleviewinc/keg-packages/keg-base:development
 
 # Entry point to the keg-proxy for all services
 # Allows the proxy to automatically route all traffic coming into port 80/443
