--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: "12"
 
       - name: "Cache Dependencies"
-      - uses: bahmutov/npm-install@v1
+        uses: bahmutov/npm-install@v1
         with:
           install-command: yarn install --ignore-engines --frozen-lockfile --silent
 
