feat: Github Actions

--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -28,6 +28,12 @@ jobs:
         id: run-repo-format
         run: yarn format
 
+      - name: "Setup CLI config"
+        id: setup-cli-config
+        run: bash scripts/ci/setupCLIConfig.sh
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
       - name: "Run Repo Tests"
         id: run-repo-tests
         run: yarn test
