--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   tests:
-    name: 'Run Repo Tests'
+    name: 'Run CLI Tests'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -24,16 +24,12 @@ jobs:
         with:
           install-command: yarn install --ignore-engines --frozen-lockfile --silent
 
-      - name: "Run Repo Format"
-        id: run-repo-format
-        run: yarn format
-
       - name: "Setup CLI config"
         id: setup-cli-config
         run: bash scripts/ci/setupCLIConfig.sh
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-      - name: "Run Repo Tests"
+      - name: "Run CLI Tests"
         id: run-repo-tests
-        run: yarn test
+        run: bash scripts/ci/runYarnCmd.sh "test"
