revert: KEG_IMAGE_FROM   * Reverted KEG_BASE_IMAGE back to KEG_IMAGE_FROM

--- a/containers/core/values.yml
+++ b/containers/core/values.yml
@@ -67,5 +67,5 @@ env:
   IMAGE: "keg-core"
   VERSION: "0.0.1"
   CONTAINER_NAME: "keg-core"
-  KEG_BASE_IMAGE: keg-core:master
+  KEG_IMAGE_FROM: keg-core:master
   CHOKIDAR_USEPOLLING: 1
