clean: Removed some ENVs

--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -17,15 +17,6 @@ KEG_CONFIG_PATH={{ cli.paths.kegConfig }}
 RESOLVER_PATH={{ cli.paths.resolver }}
 JSUTILS_PATH={{ cli.paths.jsutils }}
 
-# --- EXPO CONTEXT ENVs --- #
-
-# Cli
-EXPO_CLI_VERSION=3.28.5
-
-# Container Ports
-EXPO_DEBUG_PORT=19002
-EXPO_APP_PORT=19006
-
 # --- GIT CONTEXT ENVs --- #
 
 # Github Key
@@ -37,6 +28,8 @@ GIT_HUB_URL=https://github.com/simpleviewinc/keg-hub.git
 GIT_HUB_BRANCH=develop
 
 # --- DOCKER ENV CONTEXT --- #
+# Version of the expo CLI installing into the keg-base:master image
+EXPO_CLI_VERSION=3.28.5
 
 # Name of the image used in the FROM directive of the Dockerfile
 KEG_NODE_VERSION=12.19-alpine
@@ -64,6 +57,3 @@ DOC_RESOLVER_PATH=/keg/tap-resolver
 # Where application to be run is installed on docker container
 DOC_APP_PATH=/keg/tap
 
-# Needed so react-native apps know how to connect to the package
-# Users the docker-keg IP address
-RN_PACKAGER_IP={{ envs.KEG_DOCKER_IP }}
