--- a/containers/base/values.yml
+++ b/containers/base/values.yml
@@ -1,8 +1,7 @@
-
 env:
   # --- BASE ENV CONTEXT --- #
 
-  KEG_CONTEXT_PATH: "{{ cli.paths.cli }}"
+  KEG_CONTEXT_PATH: "{{ cli.paths.keg }}"
   KEG_DOCKER_FILE: "{{ cli.paths.containers }}/base/Dockerfile"
   KEG_VALUES_FILE: "{{ cli.paths.containers }}/base/values.yml"
   KEG_COMPOSE_DEFAULT: "{{ cli.paths.containers }}/base/docker-compose.yml"
@@ -14,12 +13,10 @@ env:
     # KEG_COMPOSE_<ENV>: "/path/to/override.yml"
 
   # --- DOCKER ENV CONTEXT --- #
-
-  DOC_APP_PATH: /keg/keg-cli
+  DOC_APP_PATH: /keg-hub
 
   # Image ENVs
   IMAGE: keg-base
-  VERSION: "0.0.1"
   KEG_IMAGE_TAG: master
 
   # Container ENVs
