fix: env KEG_MUTAGEN_FILE   * Changed KEG_MUTAGEN_PATH to KEG_MUTAGEN_FILE     * This matches other envs that are paths to a file, and not a directory

--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -13,7 +13,7 @@ env:
 
   # Defines the location of the mutagen config
   # Without it, mutagen syncs will use the default settings
-  KEG_MUTAGEN_PATH: "{{ cli.paths.containers }}/components/mutagen.yml"
+  KEG_MUTAGEN_FILE: "{{ cli.paths.containers }}/components/mutagen.yml"
   
   # The default docker-compose file path
   KEG_COMPOSE_DEFAULT: "{{ cli.paths.containers }}/components/docker-compose.yml"
