--- a/containers/tap/values.yml
+++ b/containers/tap/values.yml
@@ -1,9 +1,8 @@
 
-start: /bin/bash /keg/keg-cli/containers/tap/run.sh
 env:
   # --- LOCAL ENV CONTEXT --- #
   COMPONENTS_PATH: "{{ cli.paths.components }}"
-  RETHEME_PATH: "{{ cli.taps.retheme.path }}"
+  RETHEME_PATH: "{{ cli.taps.links.retheme }}"
   RESOLVER_PATH: "{{ cli.paths.resolver }}"
   CLI_PATH: "{{ cli.paths.cli }}"
   
@@ -12,7 +11,7 @@ env:
   # Docker / Docker Compose paths
   KEG_DOCKER_FILE: "{{ cli.paths.containers }}/tap/Dockerfile"
   KEG_VALUES_FILE: "{{ cli.paths.containers }}/tap/values.yml"
-  KEG_MUTAGEN_PATH: "{{ cli.paths.containers }}/tap/mutagen.yml"
+  KEG_MUTAGEN_FILE: "{{ cli.paths.containers }}/tap/mutagen.yml"
 
   # The default docker-compose file path
   KEG_COMPOSE_DEFAULT: "{{ cli.paths.containers }}/tap/docker-compose.yml"
@@ -24,7 +23,7 @@ env:
 
   # The KEG_CONTEXT_PATH env should be the location of the tap being run
   # So it should NOT be set inside the .env file
-  KEG_CONTEXT_PATH: INITIAL
+  # KEG_CONTEXT_PATH: INITIAL
 
   # --- DOCKER ENV CONTEXT --- #
 
@@ -38,10 +37,6 @@ env:
   DOC_RETHEME_PATH: /keg/tap/node_modules/keg-core/node_modules/@keg-hub/re-theme
   DOC_RESOLVER_PATH: /keg/tap/node_modules/keg-core/node_modules/@keg-hub/tap-resolver
   DOC_JSUTILS_PATH: /keg/tap/node_modules/keg-core/node_modules/@keg-hub/jsutils
-
-  # Allow access to expo dev tools within the docker container
-  EXPO_DEVTOOLS_LISTEN_ADDRESS: 0.0.0.0
-  KEG_EXEC_CMD: tap:start
 
   # --- KEG-PROXY ENVs --- #
 
@@ -67,12 +62,7 @@ env:
 
   # --- GENERAL CONTEXT ENVs --- #
 
-  # Image Build information
+  KEG_EXEC_CMD: tap:start
   IMAGE: tap
-  VERSION: "0.0.1"
   CONTAINER_NAME: tap
   CHOKIDAR_USEPOLLING: 1
-  KEG_IMAGE_FROM: tap:master
-
-  # Git tap url in github
-  GIT_APP_URL: INITIAL
