--- a/scripts/ci/ci.env
+++ b/scripts/ci/ci.env
@@ -36,8 +36,7 @@ GIT_HUB_BRANCH=develop
 
 # Name of the image used in the FROM directive of the Dockerfile
 KEG_NODE_VERSION=12.19-alpine
-KEG_IMAGE_FROM=keg-base:{{ cli.settings.defaultEnv }}
-KEG_BASE_IMAGE=docker.pkg.github.com/simpleviewinc/keg-packages/keg-base:{{ cli.settings.defaultEnv }}
+KEG_IMAGE_FROM=docker.pkg.github.com/simpleviewinc/keg-packages/keg-base:{{ cli.settings.defaultEnv }}
 
 # Entry point to the keg-proxy for all services
 # Allows the proxy to automatically route all traffic coming into port 80/443
