--- a/containers/base/cli.config.json
+++ b/containers/base/cli.config.json
@@ -3,8 +3,8 @@
   "name": "keg-cli",
   "displayName": "Keg CLI",
   "docker": {
-    "providerUrl": "docker.pkg.github.com",
-    "namespace": "simpleviewinc/keg-packages",
+    "providerUrl": "ghcr.io",
+    "namespace": "simpleviewinc",
     "user": "keg-public",
     "token": ""
   },
