--- a/scripts/setup/cli.config.json
+++ b/scripts/setup/cli.config.json
@@ -2,8 +2,8 @@
   "name": "keg-cli",
   "displayName": "Keg CLI",
   "docker": {
-    "providerUrl": "docker.pkg.github.com",
-    "namespace": "simpleviewinc/keg-packages",
+    "providerUrl": "ghcr.io",
+    "namespace": "simpleviewinc",
     "user": "",
     "token": ""
   },
