--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -36,7 +36,7 @@ EXPO_CLI_VERSION=3.28.5
 KEG_NODE_VERSION=12.19-alpine
 
 # Name of the image used in the FROM directive of the Dockerfile
-KEG_IMAGE_FROM=docker.pkg.github.com/simpleviewinc/keg-packages/keg-base:{{cli.settings.docker.defaultTag}}
+KEG_IMAGE_FROM=ghcr.io/simpleviewinc/keg-base:{{cli.settings.docker.defaultTag}}
 KEG_IMAGE_TAG={{ cli.settings.docker.defaultTag }}
 
 # Entry point to the keg-proxy for all services
