--- a/containers/components/docker-compose.yml
+++ b/containers/components/docker-compose.yml
@@ -1,16 +1,14 @@
 version: "3.8"
 services:
   keg-components:
-    # TODO: Define the KEG_BASE_IMAGE
+    # TODO: Define the KEG_FROM_IMAGE
     privileged: true
     build:
       context: ${KEG_CONTEXT_PATH}
       dockerfile: ${KEG_DOCKER_FILE}
       args:
         - DOC_APP_PATH
-        - KEG_BUILD_TYPE
-        - KEG_CORE_PATH
-        - KEG_IMAGE_FROM
+        - KEG_BASE_IMAGE
         - KEG_NODE_VERSION
     environment:
       - CHOKIDAR_USEPOLLING
@@ -19,5 +17,6 @@ services:
       - DOC_JSUTILS_PATH
       - KEG_EXEC_CMD
       - KEG_DOCKER_EXEC
+      - KEG_IMAGE_FROM
       - KEG_NM_INSTALL
       - NODE_ENV
