--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -69,5 +69,6 @@ env:
 
   # Image Build information
   IMAGE: keg-components
+  VERSION: 1.0.0
   CONTAINER_NAME: keg-components
   CHOKIDAR_USEPOLLING: 1
